--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
-    <title>thought-holder</title>
+
+	<!-- GOOGLE FONTS -->
+	<link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" rel="stylesheet">
+
+	<!-- FONT AWESOME ICONS -->
+	<script src="https://kit.fontawesome.com/4177917276.js" crossorigin="anonymous"></script>
+
+    <title>ThoughtHolder</title>
   </head>
   <body>
     <noscript>
